Aggiustati metodi per funzionare col frontend
